--- a/Ritual.Booking.Web/Views/Account/Register.cshtml
+++ b/Ritual.Booking.Web/Views/Account/Register.cshtml
@@ -25,15 +25,20 @@
                             @Html.AntiForgeryToken()
                             <h2>Register for a Trial Membership.</h2>
                             <hr />
-                            <p><strong>$50.00</strong> for a 7 day, <strong><u>unlimited</u></strong> access pass to Ritual.<br/>
+                            <p>
+                                <strong>$50.00</strong> for a 7 day, <strong><u>unlimited</u></strong> access pass to Ritual.<br />
                                 You also get the following complimentary items with your trial:
                                 <ul>
                                     <li>Fitness and mobility assessment</li>
                                     <li>Meal replacement smoothie</li>
                                     <li>Workout attire and towels</li>
                                     <li>Access to the Ritual Grub Guide (nutrition plan)</li>
-                                </ul></p>
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
+                                </ul>
+                            </p>
+                            if (ViewContext.ViewData.ModelState.Where(x => x.Key == "").Any())
+                            {
+                                @Html.ValidationSummary("", new { @class = "alert-box alert" })
+                            }
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
