--- a/Ritual.Booking.Web/Views/Locations/Index.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Index.cshtml
@@ -31,7 +31,7 @@
                     }
                 </div>
                 <div class="large-6 medium-6 columns">
-
+                    <div id="ritualMap"></div>
                 </div>
             </div>
             <div class="row">
@@ -79,6 +79,7 @@
                                 <td>
                                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" })
                                     @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
+                                    <a href="#" class="button center-ritual-map" data-long="@item.Longitude" data-lat="@item.Latitude"><i class="fa fa-map-marker"></i></a>
                                 </td>
                             </tr>
                         }
@@ -90,3 +91,11 @@
         </div>
     </div>
 </section>
+
+@section Scripts {
+    <script type="text/javascript"/>
+    $(document).ready(function(){
+        RITUAL.Core.Locations.Listing();
+    });
+    </script>
+}
