--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -16,7 +16,7 @@
     @Styles.Render("~/Content/foundation/css")
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300,400italic,300italic,700italic" rel="stylesheet" type="text/css" />
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
         @RenderSection("head", required: false)
         @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
