--- a/Ritual.Booking.Web/Views/Account/Register.cshtml
+++ b/Ritual.Booking.Web/Views/Account/Register.cshtml
@@ -14,7 +14,7 @@
 <!-- Main content -->
 <section class="content">
     <div class="row">
-        <div class="small-5 large-centered columns">
+        <div class="small-12 medium-8 small-6 large-centered columns">
 
             <div class='builder-form' id="loginForm">
                 <div class="row">
