--- a/Ritual.Booking.Web/Views/Members/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Members/Details.cshtml
@@ -136,7 +136,7 @@
                     <th>End Date</th>
                     <th>Action</th>
                 </tr>
-                @foreach (var item in Model.Memberships)
+                @foreach (var item in Model.Member.Memberships)
                 {
                     <tr>
                         <td>
