--- a/Ritual.Booking.Web/Views/Packages/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Packages/Details.cshtml
@@ -1,82 +1,113 @@
 ﻿@model Ritual.Booking.Data.Package
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Ritual - Package Details (" + @Model.Name + ")";
 }
 
-<h2>Details</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
 
-<div>
-    <h4>Package</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackageType)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageType)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.PackageType)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackageType)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackagePeriodMonths)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackagePeriodMonths)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.PackagePeriodMonths)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackagePeriodMonths)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackageSuspensionLimit)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageSuspensionLimit)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.PackageSuspensionLimit)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackageSuspensionLimit)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackageVisitLimit)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageVisitLimit)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.PackageVisitLimit)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackageVisitLimit)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackageIsActive)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageIsActive)
-        </dt>
+                    <dd>
+                        @if (Model.PackageIsActive.Value == false)
+                        {
+                            @: <i class="fa fa-times"></i>
+                        }
+                        else
+                        {
+                            @: <i class="fa fa-check"></i>
+                        }
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackageIsActive)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackageIsReoccuring)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageIsReoccuring)
-        </dt>
+                    <dd>
+                        @if (Model.PackageIsReoccuring.Value == false)
+                        {
+                            @: <i class="fa fa-times"></i>
+                        }
+                        else
+                        {
+                            @: <i class="fa fa-check"></i>
+                        }
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackageIsReoccuring)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PackagePayInFull)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PackagePayInFull)
-        </dt>
+                    <dd>
+                        @if (Model.PackagePayInFull.Value == false)
+                        {
+                            @: <i class="fa fa-times"></i>
+                        }
+                        else
+                        {
+                            @: <i class="fa fa-check"></i>
+                        }
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PackagePayInFull)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+                </dl>
+            </div>
+            <p>
+                @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "button" })
+                @Html.ActionLink("Back to List", "Index", "", new { @class = "button" })
+            </p>
+        </div>
+    </div>
+</section>
