--- a/Ritual.Booking.Web/Views/QuarterlyAssessments/Details.cshtml
+++ b/Ritual.Booking.Web/Views/QuarterlyAssessments/Details.cshtml
@@ -283,11 +283,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Trainer.FirstName)
+            @Html.DisplayNameFor(model => model.Employee.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Trainer.FirstName)
+            @Html.DisplayFor(model => model.Employee.FirstName)
         </dd>
 
     </dl>
