--- a/Ritual.Booking.Web/Content/foundation/app.css
+++ b/Ritual.Booking.Web/Content/foundation/app.css
@@ -86,6 +86,44 @@ dd {
     font-size:0.8em;
 }
 
+.canvas-holder {
+padding: 4px 0;
+margin: 20px 0;
+position: relative;
+}
+.doughnut-legend {
+  list-style: none;
+  position: absolute;
+  right: 8px;
+  top: 0;
+}
+.doughnut-legend li {
+  display: block;
+  padding-left: 30px;
+  position: relative;
+  margin-bottom: 4px;
+  border-radius: 5px;
+  padding: 2px 8px 2px 28px;
+  font-size: 14px;
+  cursor: default;
+  -webkit-transition: background-color 200ms ease-in-out;
+  -moz-transition: background-color 200ms ease-in-out;
+  -o-transition: background-color 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out;
+}
+.doughnut-legend li:hover {
+  background-color: #fafafa;
+}
+.doughnut-legend li span {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 100%;
+  border-radius: 5px;
+}
+
 .table {
     width: 100%;
     font-weight: normal !important;
@@ -586,7 +624,7 @@ img {
 	-----------------------------*/
 
 div.alert-box {
-    background-color: #00AEEF;
+    background-color: #666666;
     padding: 14px 30px;
     border: none;
     font-size: 1.2em;
@@ -595,6 +633,10 @@ div.alert-box {
 
     div.alert-box.success {
         background-color: #3CB878;
+    }
+
+    div.alert-box.info {
+        background-color:#008CBA;
     }
 
     div.alert-box.alert {
@@ -780,12 +822,21 @@ div.alert-box {
 }
 
 .card-container .card {
-    min-height: 110px;
     margin-bottom: 20px;
     position: relative;
     width: 100%;
     cursor: pointer;
     z-index: 9;
+    background-color: #16a085;
+  -webkit-transition: background-color 0.4s ease-out;
+  -moz-transition: background-color 0.4s ease-out;
+  -o-transition: background-color 0.4s ease-out;
+  transition: background-color 0.4s ease-out;
+}
+
+.card-container .card:hover
+{
+    background-color:#222 !important;
 }
 
     .card-container .card .front {
@@ -796,13 +847,17 @@ div.alert-box {
         top: 0;
         left: 0;
         z-index: 11;
-        background-color: #16a085 !important;
         color: #fff;
     }
 
     .card-container .card i {
         font-size: 3em;
     }
+
+    .card-container .card.bg-red{
+        background-color:#a0161d;
+    }
+
 
 .booking-slot {
     position: relative;
