--- a/Ritual.Booking.Web/Views/Memberships/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Memberships/Details.cshtml
@@ -1,138 +1,148 @@
 ﻿@model Ritual.Booking.Data.Membership
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Ritual - Membership Details (" + @Model.Id + ")";
 }
 
-<h2>Details</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.StartDate)
+                    </dt>
 
-<div>
-    <h4>Membership</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.StartDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.EndDate)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.EndDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Trial)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Trial)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Trial)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Trial)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.CancellationDate)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CancellationDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.CancellationDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CancellationDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Paid)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Paid)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Paid)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Paid)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.InitialPaymentDate)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.InitialPaymentDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.InitialPaymentDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.InitialPaymentDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.InitialPayment)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.InitialPayment)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.InitialPayment)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.InitialPayment)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.MonthlyPrice)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MonthlyPrice)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.MonthlyPrice)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.MonthlyPrice)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.TotalPrice)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalPrice)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.TotalPrice)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TotalPrice)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DiscountPercentage)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DiscountPercentage)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DiscountPercentage)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DiscountPercentage)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DiscountPrice)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DiscountPrice)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DiscountPrice)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DiscountPrice)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DiscountReason)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DiscountReason)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DiscountReason)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DiscountReason)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Member.FullName)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Member.Salutation)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Member.FullName)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Member.Salutation)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.MembershipState.Name)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MembershipState.Name)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.MembershipState.Name)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.MembershipState.Name)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Package.Name)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Package.Name)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Package.Name)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Package.Name)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+                </dl>
+            </div>
+            <p>
+                @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "button" })
+                @Html.ActionLink("Back to List", "Index", "", new { @class = "button" })
+            </p>
+        </div>
+    </div>
+</section>
