--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -17,8 +17,8 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300,400italic,300italic,700italic" rel="stylesheet" type="text/css" />
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-        @RenderSection("head", required: false)
-        @Styles.Render("~/Content/themes/base/css")
+    @RenderSection("head", required: false)
+    @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="skin-green">
@@ -58,39 +58,42 @@
 
                     @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
                     {
-                        <li class="treeview">
-                            @Html.ActionLink("Front Of House", "Index", "FrontOfHouse")
-                            <ul class="treeview-menu">
-                                <li>@Html.ActionLink("Check-in", "checkin", "FrontOfHouse")</li>
-                                <li>@Html.ActionLink("Fuelbar", "fuelbar", "FrontOfHouse")</li>
-                                <li>@Html.ActionLink("Feedback", "feedback", "FrontOfHouse")</li>
-                            </ul>
-                        </li>
-                        <li class="treeview">
-                            <a href="#">Admin</a>
-                            <ul class="treeview-menu">
-                                <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
-                                <li>@Html.ActionLink("Members", "Index", "Members")</li>
-                                <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
-                                <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
-                                <li>@Html.ActionLink("Packages", "Index", "Packages")</li>
-                            </ul>
-                        </li>
+                        if (!Ritual.Booking.Web.Controllers.ControllerHelper.doesUserHaveRolePermissions("Member"))
+                        {
+                            <li class="treeview">
+                                @Html.ActionLink("Front Of House", "Index", "FrontOfHouse")
+                                <ul class="treeview-menu">
+                                    <li>@Html.ActionLink("Check-in", "checkin", "FrontOfHouse")</li>
+                                    <li>@Html.ActionLink("Fuelbar", "fuelbar", "FrontOfHouse")</li>
+                                    <li>@Html.ActionLink("Feedback", "feedback", "FrontOfHouse")</li>
+                                </ul>
+                            </li>
+                        }
+                        if (!Ritual.Booking.Web.Controllers.ControllerHelper.doesUserHaveRolePermissions("Member"))
+                        {
+                            <li class="treeview">
+                                <a href="#">Admin</a>
+                                <ul class="treeview-menu">
+                                    <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
+                                    <li>@Html.ActionLink("Members", "Index", "Members")</li>
+                                    <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
+                                    <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
+                                    <li>@Html.ActionLink("Packages", "Index", "Packages")</li>
+                                </ul>
+                            </li>
+                        }
 
-                        <li class="treeview">
-                            <a href="#">Training Zone</a>
-                            <ul class="treeview-menu">
-                                <li>@Html.ActionLink("Dashboard", "Dashboard", "TrainingZone")</li>
-                                <li>@Html.ActionLink("My Ritual", "MyRitual", "TrainingZone")</li>
-                                <li>@Html.ActionLink("My Assessments", "MyAssessments", "TrainingZone")</li>
-                            </ul>
-                        </li>
-
-
-                        @*<li>@Html.ActionLink("Bookings", "Index", "SessionBookings")</li>
-                            <li>@Html.ActionLink("Booking States", "Index", "SessionBookingStates")</li>
-                            <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
-                            <li>@Html.ActionLink("Membership States", "Index", "Membership States")</li>*@
+                        if (!Ritual.Booking.Web.Controllers.ControllerHelper.doesUserHaveRolePermissions("Member"))
+                        {
+                            <li class="treeview">
+                                <a href="#">Training Zone</a>
+                                <ul class="treeview-menu">
+                                    <li>@Html.ActionLink("Dashboard", "Dashboard", "TrainingZone")</li>
+                                    <li>@Html.ActionLink("My Ritual", "MyRitual", "TrainingZone")</li>
+                                    <li>@Html.ActionLink("My Assessments", "MyAssessments", "TrainingZone")</li>
+                                </ul>
+                            </li>
+                        }
                     }
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
@@ -107,6 +110,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery-ui")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/chartjs")
     @Scripts.Render("~/bundles/ritual")
 
     @Scripts.Render("~/bundles/foundation")
