--- a/Ritual.Web.Admin/Views/Locations/Details.cshtml
+++ b/Ritual.Web.Admin/Views/Locations/Details.cshtml
@@ -190,7 +190,7 @@
                                 @Html.DisplayFor(modelItem => item.OverrideEndDate)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.AltCloseTme)
+                                @Html.DisplayFor(modelItem => item.AltCloseTime)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.OverrideReason)
