--- a/Ritual.Web.Members/Views/TrainingZone/MyRitual.cshtml
+++ b/Ritual.Web.Members/Views/TrainingZone/MyRitual.cshtml
@@ -205,7 +205,8 @@
                         }
                         else
                         {
-                            <tr><td colspan="4"><div class="alert-box">You have no past memberships</div></td></tr>
+                            <tr><td colspan="4">
+                                <div class="alert-box">You have no past memberships</div></td></tr>
                         }
                     </table>
                 </div>
